test with one peer

--- a/pkg/wireguard/tmpl/wireguard.conf.tmpl
+++ b/pkg/wireguard/tmpl/wireguard.conf.tmpl
@@ -4,12 +4,13 @@ PrivateKey = {{ .PrivateKey }}
 ListenPort = {{ .Port }}
 {{- if .PostUp }}
 
-{{ end }}
+{{- end }}
 {{- if .PostDown }}
 
-{{ end }}
+{{- end }}
 
 {{- range $index, $peer := .Peers }}
+
 [Peer]
 Endpoint = {{ $peer.Endpoint }}
 PublicKey = {{ $peer.PublicKey }}
